--- a/_config.yml
+++ b/_config.yml
@@ -11,15 +11,15 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: ÃÏ—°À˜ # add your name
 author-img: touxaing.gif # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: ºÚΩÈ≤‚ ‘. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: add your Github handle # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: add your discus identifier # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
