改为全英文

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ url: " https://bhlqh.github.io/UndeadSolaireTest/" # the base hostname & protoco
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: ÃÏ—°À˜ # add your name
+author: only englishi # add your name
 author-img: touxaing.gif # add your photo
-about-author: ºÚΩÈ≤‚ ‘. # add description
+about-author: test. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: add your Github handle # add your Github handle
