Update _config.yml 中文测试

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://bhlqh.github.io/UndeadSolaireTest/" # the base hostname & protocol
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: test # add your name
+author: 天选索 # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
