--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ url: "https://bhlqh.github.io/UndeadSolaireTest/" # the base hostname & protocol
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: 天选索 # add your name
-author-img: david-freeman.jpg # add your photo
+author: 我的爱人索拉尔 # add your name
+author-img: baobao.gif # add your photo
 about-author: retest. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
