--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: 我的爱人索拉尔 # add your name
-author-img: Image_1705079089806.png # add your photo
+author-img: Image_1705081339488.jpg # add your photo
 about-author: retest. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
