--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: onlyen
+title: Hello, world! 
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: 我的爱人索拉尔 # add your name
-author-img: baobao.gif # add your photo
+author-img: Image_1705081339488.jpg # add your photo
 about-author: retest. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
