--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,14 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: 我的爱人索拉尔 # add your name
 author-img: baobao.gif # add your photo
-about-author: retest.中文字体测试 # add description
+about-author: 大概就是一些半成品合集，
+因为不是正式完篇就不投稿了，
+主要是想根据大家的想法看看先写完哪些，
+或是找到点建议和后续发展灵感
+因为要躲审核朋友就干脆搭了这个网页qwq
+越写越感觉自己不适合写作，感恩大家的阅读
+虽然写的确实痛苦..也知道自己写的一般，但没办法啊，果然还是喜欢索拉尔
+就当能为圈子加点作品数啦，本质水贴(✔) # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: 不重要 # add your Github handle
