--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: 不重要 # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-email: letme_sese@outlook.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
