--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: 我的爱人索拉尔 # add your name
 author-img: baobao.gif # add your photo
-about-author: 大概就是一些半成品合集，因为不是正式完篇就不投稿了，主要是想根据大家的想法看看先写完哪些，或是找到点建议和后续发展灵感。愿意去博文下评论会万分感激的(为什么不添加网页评论功能，因为不会qwq)因为其它网站要躲审核，朋友就干脆搭了这个网页qwq  ，越写越感觉自己不适合写作，虽然写的确实痛苦..也知道自己写的一般，但没办法啊，果然还是喜欢索拉尔啊，感恩大家的阅读...就当能为圈子加点作品数啦，本质水贴(✔)      头像源于doudz太太 侧栏图源于目寸术太太 # add description
+about-author: 不挡索拉尔的美貌啦   头像源于doudz太太 侧栏图源于目寸术太太 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: 不重要 # add your Github handle
