--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: 我的爱人索拉尔 # add your name
 author-img: baobao.gif # add your photo
-about-author: 不挡索拉尔的美貌啦   头像源于doudz太太 侧栏图源于目寸术太太 # add description
+about-author: 头像源于doudz太太 侧栏图源于目寸术太太 # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: 不重要 # add your Github handle
